--- a/components/Data/Locale/Ar.json
+++ b/components/Data/Locale/Ar.json
@@ -48,7 +48,7 @@
     "descr" : "تفاصيل المشروع",
     "sendMess" :"أرسال"
   },  "services" : {
-    "services" : "Services",
+    "services" : "خدماتنا",
     "Ui" :"تصميم تجربة وواجهة المستخدم UI/UX",
     "web" :"تصميم و تطوير مواقع الانترنت",
     "mobile" :"تصميم و برمجة تطبيقات الجوال",
