--- a/components/Data/Locale/Ar.json
+++ b/components/Data/Locale/Ar.json
@@ -52,8 +52,13 @@
     "Ui" :"تصميم تجربة وواجهة المستخدم UI/UX",
     "web" :"تصميم و تطوير مواقع الانترنت",
     "mobile" :"تصميم و برمجة تطبيقات الجوال",
+    "responsive" :"تصميم متجاوب علي جميع الشاشات",
+    "ResponsiveDe":" من المهم بشكل متزايد أن تمتلك الشركات مواقع ويب تعرض بشكل صحيح على شاشات أصغر حتى لا يواجه المستخدمون صورًا مشوهة أو تجربة الموقع دون المستوى الأمثل",
     "UiDe" : "يجذب عملاء جدد على المنصة من خلال تلبية احتياجات المستهلكين ، ستجذب المزيد من العملاء المحتملين الذين يرغبون في التحويل. مع UI / UX المتميز ، سيثير النهج الصحيح اهتمام العملاء ويؤدي في النهاية إلى تحويلات مثمرة.",
   "mobileDe" : "يتم تعزيز علاقات العملاء من خلال تطبيقات الجوال ، قم بتطوير علامتك التجارية وتقديم رؤى رائعة للعملاء. يمكنك تحسين احتياجات الاتصالات التسويقية الخاصة بك باستخدام تطبيق محمول مخصص.   .",
   "webDe" :"أول شيء يلاحظه العملاء المحتملون بشأن عملك هو موقع الويب الخاص بك. إنه يعرض شخصية ومهنية عملك مع زيادة المبيعات ، وتطوير علاقات طويلة الأمد مع العملاء ، وجعل مؤسستك في متناول جمهور أوسع."
+  }, "certification" : {
+    "certification" :"الشهادات",
+    "view" :"اضغط للمشاهدة"
   }
 }
