--- a/components/Data/Locale/Ar.json
+++ b/components/Data/Locale/Ar.json
@@ -21,6 +21,7 @@
     "comp" :"مشاريع مكتملة",
     "train" : "تدريب",
     "free" :"عمل حر ",
+    "dashboard":"لوح تحكم",
     "Descrip" :"مرحبا أصدقائي الأعزاء. انا عبد الرحمن طارق عوني. على مدار العامين الماضيين ، استخدمت React.js و Next.js في عملي في تطوير الواجهة الأمامية. أعمل على مواقع ويب جادة وسريعة تظهر كنتيجة أولى في عمليات بحث Google ، وأنا حاصل على درجة البكالوريوس في علوم الكمبيوتر.",
     "viewCv" :"عرض السيرة الذاتية",
     "project" :"مشاريع",
