--- a/components/Data/Locale/En.json
+++ b/components/Data/Locale/En.json
@@ -21,6 +21,7 @@
     "comp" :"Completed",
     "train" : "Training",
     "free" :"Freelance",
+    "dashboard":"Dashboard",
     "Descrip" :"Hello, my dear friends. I'm Abdelrahman Tarek Awny. For the past two years, I have used React.js and Next.js in my front-end development work. I work on serious, quick websites that come up as the first result on Google searches, and I hold a bachelor's degree in computer science.",
     "viewCv" :"View Cv",
     "project" :"Projects",
